[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dioxus]
version = "0.1.8"            # Core functionality for Dioxus - a concurrent renderer-agnostic Virtual DOM for interactive user exp…
features = ["desktop"]
